@@ -3415,7 +3415,7 @@
     ],
     "iconIndex": 632,
     "name": "Cloth Mask",
-    "note": "<Synthesis Ingredients>\nWorn Cloth: 5\nTarantula Silk: 3\nAntidote\nRaw Truffle\nVial of Poison\n</Synthesis Ingredients>\n<Mask Name: Sickness Stopper>\n<Synthesis SE: Equip3>\n\n<Disassemble Pool: Basic>\nx2-5 Worn Cloth: 100%\nx1-2 Tarantula Silk: 100%\n</Disassemble Pool: Basic>",
+    "note": "<Disassemble Pool: Basic>\nx2-5 Worn Cloth: 100%\n</Disassemble Pool: Basic>",
     "params": [
       0,
       0,
