@@ -3321,7 +3321,7 @@
     ],
     "gold": 60,
     "name": "Tarantula",
-    "note": "<Armor Weakness: Slashing>\n<Element: Earth>\n<Passive State: 148>\n\n<Sideview Battler: Tarantula>\n<Attack Animation: 211>\n\n<Enemy Drops>\nWeb Ball: 75%\nWeb Ball: 75%\nVial of Poison: 25%\nShard of Glass: 1%\nEarth Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Earth>\n<Passive State: 148>\n\n<Sideview Battler: Tarantula>\n<Attack Animation: 211>\n\n<Enemy Drops>\nCloth Mask: 5%\nWeb Ball: 75%\nWeb Ball: 75%\nVial of Poison: 25%\nShard of Glass: 1%\nEarth Essence: 20%\n</Enemy Drops>",
     "params": [
       1000,
       0,
@@ -3767,7 +3767,7 @@
     ],
     "gold": 48,
     "name": "Horrorspore",
-    "note": "<Armor Weakness: Slashing>\n<Element: Plant>\n<Passive State: 136>\n\n<AI Priority>\nState !== Poisoned +++ Random 60%: Poison Powder\n</AI Priority>\n\n<Enemy Drops>\nRaw Truffle: 75%\nRaw Truffle: 75%\nBrown Mushroom: 75%\nBrown Mushroom: 75%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nHRG Scroll: 10%\nPlant Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Plant>\n<Passive State: 136>\n\n<AI Priority>\nState !== Poisoned +++ Random 60%: Poison Powder\n</AI Priority>\n\n<Enemy Drops>\nCloth Mask: 5%\nRaw Truffle: 75%\nRaw Truffle: 75%\nBrown Mushroom: 75%\nBrown Mushroom: 75%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nHRG Scroll: 10%\nPlant Essence: 20%\n</Enemy Drops>",
     "params": [
       2000,
       0,
@@ -5266,7 +5266,7 @@
     ],
     "gold": 72,
     "name": "Parasite",
-    "note": "<Armor Weakness: Piercing>\n<Passive State: 148>\n\n<Sideview Battler: NoMatchingSprite/Parasite>\n<Attack Animation: 11>\n\n<Enemy Drops>\nStinger: 75%\nStinger: 75%\nVial of Poison: 25%\nDismembered Eye: 5%\nRazor-Sharp Fang: 5%\nPDR Scroll: 10%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Piercing>\n<Passive State: 148>\n\n<Sideview Battler: NoMatchingSprite/Parasite>\n<Attack Animation: 11>\n\n<Enemy Drops>\nCloth Mask: 5%\nStinger: 75%\nStinger: 75%\nVial of Poison: 25%\nDismembered Eye: 5%\nRazor-Sharp Fang: 5%\nPDR Scroll: 10%\n</Enemy Drops>",
     "params": [
       2000,
       0,
