@@ -22,11 +22,12 @@ Changes:
   ~ MHP: 45000 → 30000
   ~ MAT: 65 → 70
   ~ Draconic Healing Thresholds: 75% 50% 25% 10% → 80% 60% 40% 20%
+ - Cloth Mask is dropped by Horrorspore, Tarantula, and Parasite instead of crafted.
  - Dismembered Eye can be dropped by Gazers.
+ - Nerfed Bat Sling drop rate from 5% to 2%.
  - Ice II (Tome) now obtained in Frozen Labyrinth chest instead of dropped by Frozen Labyrinth enemies.
  - Removed the Blank Tome.
  - Adjusted tome prices.
- - Nerfed Bat Sling drop rate from 5% to 2%.
  - Removed Outgoing Elemental Damage in favor of just amplifying every element rate.
  - Reworked Attributes menu stat colorations.
  - Moved Fire Resistance Potion to buffs category.
